# pytest-cppcheck

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/pytest_cppcheck/: plugin.py
tests/: test_plugin.py
