[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-cppcheck"
version = "0.1.2"
description = "A pytest plugin that runs cppcheck static analysis on C/C++ source files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Alex DeJarnatt", email = "adejarnatt@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0",
    "cppcheck>=1.4.0",
]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/alexdej/pytest-cppcheck"
Repository = "https://github.com/alexdej/pytest-cppcheck"

[project.entry-points."pytest11"]
cppcheck = "pytest_cppcheck.plugin"

[tool.setuptools.packages.find]
where = ["src"]
